--- a/app/sum/sum.html
+++ b/app/sum/sum.html
@@ -1,4 +1,5 @@
+<p>Enter Numbers</p>
 <input ng-model="first" type="text">
 <input ng-model="second" type="text">
 <button ng-click="sum()">Click</button>
-{{summa}}
+<p>Sum: {{summa}}</p>
