--- a/app/sum/sum.html
+++ b/app/sum/sum.html
@@ -2,4 +2,4 @@
 <input ng-model="first" type="text">
 <input ng-model="second" type="text">
 <button ng-click="sum()">Click</button>
-<p>Sum: {{sum}}</p>
+<p>Sum: {{sumOfNumbers}}</p>
